# iBridges-GUI

./: .gitignore  .nojekyll  .pylintrc  README.md  README_CLI.html  _quarto.yml  deploy_script.py  iBridges.py  iBridgesCli.py  iBridgesGui-HowTo.html  index.html  index.qmd  irods-iBridgesGui.py  pyproject.toml  requirements.txt  requirements_dev.txt  robots.txt  search.json  sitemap.xml
.github/workflows/: linter.yml  nuitka_release.yml  publish.yml  pypi_release.yml
build_tools/: build_script.py  ui_to_py.py
docs/: commandlineclient.html  developer.html  developer.qmd  developers.html  developers.qmd  getting-started.html  getting-started.qmd  info.html  info.qmd  roadmap.html  userdoc.html  userdoc.qmd
gui/: IrodsBrowser.py  IrodsDataBundle.py  IrodsExampleTab.py  IrodsInfo.py  IrodsLogin.py  IrodsUpDownload.py  LoginWindow.py  __init__.py  amberWorkflow.py  browser.py  dataTransfer.py  elabUpload.py  gui_utils.py  info.py  irodsBrowser.py  irodsCreateTicket.py  irodsInfo.py  irodsSearch.py  irodsTicketLogin.py  irodsTreeView.py  login.py  mainmenu.py  popupWidgets.py  popup_widgets.py
gui/ui_files/: ExampleTab.ui  MainMenu.ui  __init__.py  dataTransferState.ui  irodsLogin.ui  irodsLoginConfigEditor.py  irodsLoginConfigEditor.ui  renameItem.ui  tabBrowser.ui
ibridgesgui/: IrodsExampleTab.py  IrodsInfo.py  IrodsLogin.py  __init__.py  __main__.py  browser.py  checkableFsTree.py  config.py  gui_utils.py  info.py  irodsSearch.py  irodsTreeView.py  irods_tree_model.py  log_tab.py  logging.py  login.py  logviewer.py  popup_widgets.py  search.py  sync.py  threads.py  welcome.py
ibridgesgui/ui_files/: .py  ExampleTab.py  MainMenu.py  MainMenu.ui  __init__.py  configCheck.py  configCheck.ui  createCollection.py  createCollection.ui  dataTransferState.py  downloadData.py  downloadData.ui  form.ui  irodsLogin.py  irodsLogin.ui  renameItem.py  renameItem.ui  tabBrowser.py  tabBrowser.ui  tabInfo.py  tabInfo.ui  tabLogging.py  tabLogging.ui  tabSearch.py  tabSearch.ui  tabSync.py  tabSync.ui  tabUpDownload.py  transferData.py  transferData.ui  uploadData.py  uploadData.ui  welcome.py  welcome.ui
installer/: config.xml  controlscript.js  installerscript.qs  package.xml
irodsConnector/: dataOperations.py  manager.py  permission.py  resource.py  rules.py  session.py
site_libs/bootstrap/: bootstrap-579d6c4618e5a59810377e89491554d5.min.css  bootstrap-5e113afdac1e418f162bce274ee92ddb.min.css  bootstrap-8fe0731ae49629033691d27458801ab1.min.css  bootstrap-b1babad3a5c88850fd2e51a80e1b58f0.min.css  bootstrap.min.css
test/: test_context.py  test_json_config.py  test_path.py  test_utils.py
utils/: __init__.py  context.py  elab_plugin.py  irodsConnector.py  irodsConnectorIcommands.py  irods_config_keys.py  json_config.py  path.py  utils.py
