[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ibridgesgui"
authors = [
    { name = "Christine Staiger", email = "c.staiger@uu.nl" },
]
description = "Graphical user interface for accessing data and metadata on iRODS servers."
readme = "README.md"
requires-python = ">=3.9"
keywords = ["irods", "data management", "storage"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha",
]

dependencies = [
    "PySide6>=6.8.1",
    "ibridges>=1.4.0, <1.5",
    "setproctitle==1.3.5",
    "importlib-resources;python_version<='3.10'",
]

dynamic = ["version"]

[project.urls]
GitHub = "https://github.com/chStaiger/iBridges-Gui"
documentation = "https://github.com/chStaiger/iBridges-Gui"

[project.optional-dependencies]
test = [
    "pylint",
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]

deploy = [
    "Nuitka",
    "imageio",
]

all = [
    "ibridgesgui[test,deploy]",
]

[project.scripts]
ibridges-gui = "ibridgesgui.__main__:main"

[tool.setuptools]
packages = ["ibridgesgui"]

[tool.setuptools_scm]
write_to = "ibridgesgui/_version.py"

[[tool.mypy.overrides]]
module = [
    "irods.*",
]
ignore_missing_imports = true

[tool.pylint.'MASTER']
ignore-patterns="_version.py"
ignore-paths=["ibridgesgui/ui_files"]
extension-pkg-whitelist=["PySide6"]

[tool.pylint.'BASIC']
good-names=["e", "f", "m"]

[tool.pylint.'VARIABLES']
extension-pkg-whitelist="PySide6"
disable=["E0611", "E0401", "E0401", "E1101",
         "W0718", "fixme", "too-many-arguments",
         "R0912", "R0916", "R0911", "R0801", "R0902"]

[tool.pylint.'MESSAGES CONTROL']
disable="too-many-positional-arguments"

max-line-length=100
max-locals=35
max-args=10

[tool.ruff]
exclude = ["_version.py", "ui_files"]
line-length = 100
lint.select = ["D", "E", "F", "W", "I", "N"]
lint.ignore = ["D203", "D213"]
